feat: endpoint to post an installation, admin authenticated
